Fixed content height on mobile and tablet

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -614,6 +614,7 @@ body {
                 .content {
                     font-size: 11px;
                     line-height: 22px;
+                    height: 120px;
                 }
 
                 .source {
@@ -932,6 +933,7 @@ body {
                 .content {
                     font-size: 11px;
                     line-height: 22px;
+                    height: auto;
                 }
 
                 .source {
